--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "devDependencies": {
     "brittle": "^2.3.1",
     "minimist": "^1.2.6",
+    "nanobench": "^2.1.1",
     "prebuildify": "^4.1.2",
+    "pretty-bytes": "^6.0.0",
     "standard": "^17.0.0"
   },
   "scripts": {
