--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "nanobench": "^2.1.1",
     "prebuildify": "^4.1.2",
     "pretty-bytes": "^6.0.0",
-    "standard": "^17.0.0"
+    "standard": "^17.0.0",
+    "tempy": "^3.0.0"
   },
   "scripts": {
     "test": "standard && brittle test/*.mjs",
