Overhaul API and add cross platform hole punching (#3)
* Progress on new API

* Add empty Linux source

* Move stuff around and add `setSparse()`

* Implement locking for Windows

* `shared.h` -> `platform.h`

* Adjust headers

* Implement hole punching on Linux

* Implement hole punching on Windows

* Formatting

* Add test workflow

* Add missing binding

* Include `falloc.h` directly

* Include `fcntl.h` as well

* Fix Windows support

* Test that file contents remain intact on hole punch

* Write more zeroes

* RFTM

https://docs.microsoft.com/en-us/windows/win32/api/ioapiset/nf-ioapiset-deviceiocontrol

* Add proper lock test

* Add some diagnostic comment to punch test

* Add usage example and note

* Add hole punching benchmark

* Missing `await`

* Adjust format

* Put some data in there

* Output block count before and after

* Adjust output

* Correctly pass on `req->result`

* Improve stack trace

* Further improve stack traces

* Avoid double stack trace capture

* Do include some fns in stack trace

* Document macOS hole punch limitation

* Assert that blocks reduced

* Ignore fixture data

* Test unaligned hole punch

* Adjust usage example

* Use temporary files for tests

* Add implicit hole test

* Add missing `setSparse()`

* Clean up test

* Windows returns `UV_EBUSY`

--- a/package.json
+++ b/package.json
@@ -1,18 +1,23 @@
 {
   "name": "fsctl",
   "version": "1.0.0",
-  "description": "Series of small native fd utils for manipulating file attributes and more",
+  "description": "Native utilities for file manipulation, including locking and hole punching",
   "main": "index.js",
   "dependencies": {
     "napi-macros": "^2.0.0",
     "node-gyp-build": "^4.2.3"
   },
   "devDependencies": {
+    "brittle": "^2.3.1",
+    "minimist": "^1.2.6",
+    "nanobench": "^2.1.1",
     "prebuildify": "^4.1.2",
-    "tape": "^4.9.2"
+    "pretty-bytes": "^6.0.0",
+    "standard": "^17.0.0",
+    "tempy": "^3.0.0"
   },
   "scripts": {
-    "test": "tape test.js",
+    "test": "standard && brittle test/*.mjs",
     "prebuild": "prebuildify --napi",
     "prebuild-ia32": "prebuildify --napi --arch=ia32",
     "install": "node-gyp-build"
